# NutriPolo

./: .gitignore  CLAUDE.md  PLAN_MEJORAS_V7.md  PLAN_PRECISION_GASTOS.md  PLAN_REDESIGN_CLAUDE.md  README.md  Usersjpolo.claudeplansagile-yawning-koala-agent-a5c427d955c2553c6.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.claude/: launch.json
.github/workflows/: release.yml
docs/: NOTION_SETUP.md
scripts/: fix_headings.py  fix_polish.cjs  fix_polish2.cjs  fix_polish3.cjs  fix_theme2.py  install.ps1
src/: App.jsx  i18n.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: encryption.rs  google_calendar.rs  main.rs
src/components/: CalendarView.jsx  ClientDetailView.jsx  ClientDocuments.jsx  ClientModal.jsx  ClientsView.jsx  CommandPalette.jsx  ConsultationModal.jsx  ConsultationsView.jsx  Dashboard.jsx  DesignEditor.jsx  DocumentMetadataModal.jsx  ExpensesView.jsx  InvoiceModal.jsx  InvoicePreview.jsx  Invoices.jsx  MeasurementChart.jsx  NotionSync.jsx  NutritionPlanEditor.jsx  PatientSuggestionsInbox.jsx  RulesManager.jsx  SendEmailModal.jsx  SendInvoiceModal.jsx  ServicesView.jsx  SettingsView.jsx  TaxesView.jsx  UI.jsx  UnlockScreen.jsx
src/services/: documentService.js  emailService.js  folderWatcher.js  fuzzyMatcher.js  googleCalendarService.js  invoiceDesignPresets.js  notionService.js  pdfGenerator.js  pdfInvoiceGenerator.js  pdfLibGenerator.js  pdfPlanGenerator.js  pdfScanner.js  providerMemory.js  whatsappService.js
src/stores/: designStore.js  notionStore.js  store.js
