[package]
name = "contabilidad-autonomo"
version = "1.0.0"
description = "Aplicación de contabilidad para autónomos"
authors = ["Javier Polo García"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "http-all", "dialog-save", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
printpdf = "0.6"
notify = "6.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
