[package]
name = "nutripolo-app"
version = "1.0.0"
description = "Aplicación de gestión de consulta nutricional"
authors = ["Javier Polo García"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "updater", "process-relaunch", "dialog-open", "dialog-save", "fs-all", "path-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "native-tls", "builder", "hostname"] }
base64 = "0.22"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
urlencoding = "2"
tokio = { version = "1", features = ["net", "macros"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
